// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> UI Snapshot renders with default props 1`] = `
.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #BD200F;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-1 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0.25rem;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-1:active,
.emotion-1:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-1:active ~ .e1gqjikl0,
.emotion-1:focus ~ .e1gqjikl0 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-1::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-1::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-1:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-1::placeholder {
  color: #c3c0cd;
}

.emotion-1[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-3 {
  list-style-type: none;
  margin: 0;
}

<div
  className="emotion-7 emotion-8"
>
  <div
    className="emotion-5 emotion-6"
  >
    <svg
      className="radiance-field-input-icon emotion-0"
      fill="#BD200F"
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M14.6 6.79a6.747 6.747 0 00-7.9-5.36 6.7 6.7 0 00-4.31 2.84 6.71 6.71 0 00-1.04 5.06 6.747 6.747 0 007.9 5.36 6.7 6.7 0 004.31-2.84 6.71 6.71 0 001.04-5.06zM6.46.2C6.97.11 7.48.06 7.98.06a7.996 7.996 0 011.5 15.85c-.51.09-1.02.14-1.52.14-3.76 0-7.12-2.66-7.85-6.49A7.996 7.996 0 016.46.2zm.86 3.91h1.41v5.26H7.32V4.11zm-.17 6.83c0-.48.39-.84.88-.84s.88.36.88.84c0 .49-.39.86-.88.86s-.88-.37-.88-.86z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    <input
      className="emotion-1 emotion-2"
      disabled={false}
    />
    <ul
      className="emotion-3 emotion-4"
    />
  </div>
</div>
`;

exports[`<Field /> UI Snapshot renders with errorMessage, hintMessage and hideMessagesIcon props 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-0 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0.25rem;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-0:active,
.emotion-0:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-0:active ~ .emotion-3,
.emotion-0:focus ~ .emotion-3 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-0::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-0::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-0:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-0::placeholder {
  color: #c3c0cd;
}

.emotion-0[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-6 {
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  position: relative;
}

.emotion-8 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-8 svg.radiance-field-input-icon {
  opacity: 1;
}

.emotion-8 .e1gqjikl4,
.emotion-8 .emotion-1 {
  border-color: #BD200F;
}

.emotion-8 .e1gqjikl4:active,
.emotion-8 .emotion-1:active,
.emotion-8 .e1gqjikl4:focus,
.emotion-8 .emotion-1:focus {
  border-color: #BD200F;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-2 {
  color: #706D87;
  font-size: 0.875rem;
  line-height: 1.71;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  opacity: 0;
  max-height: 0;
}

.emotion-4 {
  color: #706D87;
  font-size: 0.875rem;
  line-height: 1.71;
  color: #BD200F;
  line-height: 24px;
}

.emotion-4:last-of-type {
  margin: 0 0 0.125rem 0;
}

<div
  className="emotion-10 emotion-11"
>
  <div
    className="emotion-8 emotion-9"
  >
    <input
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      className="emotion-2 emotion-3"
    >
      hint message
    </div>
    <ul
      className="emotion-6 emotion-7"
    >
      <li
        className="emotion-4 emotion-5"
        style={
          Object {
            "maxHeight": "48px",
            "opacity": "1",
            "transitionDuration": "350ms",
            "transitionProperty": "max-height, opacity",
            "transitionTimingFunction": "ease-in-out",
          }
        }
        type="error"
      >
        <strong>
          Uh Oh!
        </strong>
         Type again
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Field /> UI Snapshot renders with label and labelFor props 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 22px;
}

.emotion-7 {
  position: relative;
}

.emotion-7 svg.radiance-field-input-icon {
  opacity: 0;
  position: absolute;
  top: 20px;
  right: 1rem;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
}

.emotion-2 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #BD200F;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  color: #524D6E;
  font-size: 1rem;
  line-height: 1.75;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #ffffff;
  border: 1px solid #ededf0;
  border-radius: 0.25rem;
  color: #524D6E;
  -webkit-transition: border-color 350ms;
  transition: border-color 350ms;
  width: 100%;
  outline: none;
  margin-bottom: 2px;
  padding: 13px 2rem 13px 1rem;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
  border-color: #332e54;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

.emotion-3:active ~ .e1gqjikl0,
.emotion-3:focus ~ .e1gqjikl0 {
  max-height: 24px;
  opacity: 1;
  margin: 0.125rem 0 0 0;
}

.emotion-3::-webkit-input-placeholder {
  color: #c3c0cd;
}

.emotion-3::-moz-placeholder {
  color: #c3c0cd;
}

.emotion-3:-ms-input-placeholder {
  color: #c3c0cd;
}

.emotion-3::placeholder {
  color: #c3c0cd;
}

.emotion-3[disabled] {
  background-color: #ededf0;
  color: #c3c0cd;
  cursor: not-allowed;
  border: 1px solid #ededf0;
  box-shadow: none;
}

.emotion-5 {
  list-style-type: none;
  margin: 0;
}

.emotion-0 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
}

<div
  className="emotion-9 emotion-10"
>
  <label
    className="emotion-0 emotion-1"
    disabled={false}
    htmlFor="for-input-id"
  >
    Test Label
  </label>
  <div
    className="emotion-7 emotion-8"
  >
    <svg
      className="radiance-field-input-icon emotion-2"
      fill="#BD200F"
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M14.6 6.79a6.747 6.747 0 00-7.9-5.36 6.7 6.7 0 00-4.31 2.84 6.71 6.71 0 00-1.04 5.06 6.747 6.747 0 007.9 5.36 6.7 6.7 0 004.31-2.84 6.71 6.71 0 001.04-5.06zM6.46.2C6.97.11 7.48.06 7.98.06a7.996 7.996 0 011.5 15.85c-.51.09-1.02.14-1.52.14-3.76 0-7.12-2.66-7.85-6.49A7.996 7.996 0 016.46.2zm.86 3.91h1.41v5.26H7.32V4.11zm-.17 6.83c0-.48.39-.84.88-.84s.88.36.88.84c0 .49-.39.86-.88.86s-.88-.37-.88-.86z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    <input
      className="emotion-3 emotion-4"
      disabled={false}
    />
    <ul
      className="emotion-5 emotion-6"
    />
  </div>
</div>
`;
